--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "team-balancer",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "scripts": {
     "ng": "ng",
     "start": "npm run icon && ng serve",
@@ -13,18 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.6",
-    "@angular/common": "^9.1.6",
-    "@angular/compiler": "^9.1.6",
-    "@angular/core": "^9.1.6",
-    "@angular/forms": "^9.1.6",
-    "@angular/localize": "^9.1.6",
-    "@angular/platform-browser": "^9.1.6",
-    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/animations": "^12.1.1",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/core": "^12.1.1",
+    "@angular/forms": "^12.1.1",
+    "@angular/localize": "^12.1.1",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
     "@angular/pwa": "^0.901.5",
-    "@angular/router": "^9.1.6",
-    "@angular/service-worker": "^9.1.6",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@angular/router": "^12.1.1",
+    "@angular/service-worker": "^12.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "cookieconsent": "^3.1.1",
@@ -34,28 +34,28 @@
     "ngx-cookieconsent": "^2.2.3",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
-    "tslib": "^1.11.2",
-    "zone.js": "^0.10.3"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
-    "@angular/cli": "^9.1.5",
-    "@angular/compiler-cli": "^9.1.6",
-    "@angular/language-service": "^9.1.6",
-    "@types/jasmine": "^3.5.10",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular/cli": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
+    "@angular/language-service": "^12.1.1",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.13.5",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.4",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.0.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5"
   }
 }
